Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38087

Unexpected error `Unknown column '???' in 'GROUP BY'`

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q1/2026 Server Maintenance

    Description

      Hi,

      The following test case triggers an unexpected error `Unknown column '???' in 'GROUP BY'`

      CREATE TABLE IF NOT EXISTS t0(c0 TINYTEXT, c1 DECIMAL, c2 FLOAT) ;
      INSERT HIGH_PRIORITY IGNORE INTO t0(c2) VALUES('u^%pzX');
      INSERT INTO t0(c2) VALUES(0.7674682736888384);
      SELECT DISTINCTROW MAX(TRUE) AS ref0, (( EXISTS (SELECT 1)) && (0)) AS ref1, -1 AS ref2 FROM t0 GROUP BY  ((1) && ((t0.c0) < (t0.c1))), -1;
      

      I can reproduce this in 12.0.2-MariaDB-ubu2404

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              ChiZhang Chi Zhang
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.