MDEV-38087 Unexpected error `Unknown column '???' in 'GROUP BY'`

with `ORDER BY number` if the number doesn't refer to a valid
result column, use this number in the error message not '???'.